gccida/c0/expand_decl_cleanup
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4549:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4552:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+0h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4563:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *cleanupa; // [rsp+58h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4575:32: error: invalid suffix 'xmode' on integer constant
flag = gen_reg_rtx( *(short *)0xmode); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4584:32: error: invalid suffix 'xmode' on integer constant
v2 = type_for_mode( *(short *)0xmode, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4587:19: error: expected expression
tt = ( tree_node *)*( &global_trees + 27); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/stmt.c:4587:8: error: use of undeclared identifier 'tree_node'
tt = ( tree_node *)*( &global_trees + 27); 
       ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_decl_cleanup/src/obj/stmt.o] Error 1
